--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "express-fileupload": "^1.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
