--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@prisma/client": "^5.19.0",
     "@vinejs/vine": "^2.1.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
+    "express-rate-limit": "^7.4.0",
+    "express-redis-cache": "^1.1.3",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^10.0.0"
   },
